-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Trying to run llmount.sh without first running 'make install' fails with EINVAL at the formatting step. The faulty code is:
struct module_backfs_ops *load_backfs_module(enum ldd_mount_type mount_type)
{
(...)
/* Check for $LUSTRE environment variable from test-framework.
* This allows using locally built modules to be used.
*/
if (handle == NULL) {
char *dirname;
dirname = getenv("LUSTRE");
if (dirname) {
snprintf(filename, sizeof(filename),
>>>> "%s/utils/.libs/mount_%s.so",
dirname, fsname);
handle = dlopen(filename, RTLD_LAZY);
}
}
(...)
}